# PySQL

./: .gitignore  LICENSE  README.md  readme_updater.py  setup.cfg
examples/: basic.py  basic_psql.py  config.template.json  foreign_key.py
pysql/: __init__.py  base.py  column.py  constraints.py  datatype.py  metadata.py  model.py  query.py  schema.py  session.py  table.py  utils.py
pysql/tmp/cache/: metadata.json
