[metadata]
name = PySQL
version = attr:pysql.__version__
description = Implementing an object-relational mapper (ORM) from scratch.
long_description = file: README.md
keywords = database, sql, python, orm
license = Apache-2.0 license
classifiers =
    # Development Status :: 1 - Planning
    # Development Status :: 2 - Pre-Alpha
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    # Development Status :: 6 - Mature
    # Development Status :: 7 - Inactive
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: SQL
    Topic :: Database
    Topic :: Utilities

[options]
packages = find:
requires =
    file: requirements.txt

[options.packages.find]
exclude =
    docs*
    examples*
    testing*
